# marungusunbird

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: clippy.yml  deploy.yml
src/: augmentation.rs  badges.rs  config.rs  errors.rs  helper.rs  main.rs  requests.rs  rocket_errors.rs  tree.rs
static/css/: default.css  error.css  main.css  tree.css
static/js/: tree.js
templates/: 404.html.tera  500.html.tera  augmentation.html.tera  channel.html.tera  client.html.tera  index.html.tera  tree.html.tera
